--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.12",
     "express": "^5.1.0",
     "joi": "^17.13.3",
