--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.12",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.14.1"
   }
