--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mogoose": "^0.0.1-security",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.3",
+    "uuid": "^11.1.0"
   }
 }
